--- a/Training-poc/package.json
+++ b/Training-poc/package.json
@@ -9,6 +9,8 @@
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "yup": "^0.29.1"
   },
